--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,12 +1,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We">
 
-<h1>{{title}}</h1>
+<app-nav></app-nav>
 
-<ul>
-  <li *ngFor='let user of users'>{{user.userName}}</li>
-</ul>
-
-<button type="button" class="btn btn-primary"
-          tooltip="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
-    Simple demo
-  </button>
+<div class="container" style="margin-top: 50;">
+  <h1>{{title}}</h1>
+  <ul>
+    <li *ngFor='let user of users'>{{user.userName}}</li>
+  </ul>
+</div>
