--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,8 +3,5 @@
 <app-nav></app-nav>
 
 <div class="container" style="margin-top: 50;">
-  <h1>{{title}}</h1>
-  <ul>
-    <li *ngFor='let user of users'>{{user.userName}}</li>
-  </ul>
+<app-home></app-home>
 </div>
