--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,19 +2,16 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">GMeet</a>
+      <a class="navbar-brand" routerLink="/">GMeet</a>
         <ul class="navbar-nav me-auto" *ngIf="accountService.curentUserSource$ |async">
           <li class="nav-item">
-            <a class="nav-link " href="#">Matches</a>
+            <a class="nav-link " routerLink="/members" routerLinkActive="active">Matches</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Lists</a>
+            <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Messeges</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" routerLink="messages" routerLinkActive="active">Messeges</a>
           </li>
         </ul>
 
