--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -12,9 +12,12 @@
               <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="messages" routerLinkActive="active">Messeges</a>
+              <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messeges</a>
             </li>  
           </ng-container>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/errors" routerLinkActive="active">Errors</a>
+          </li>  
         </ul>
 
         
