--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="container mt-5">
+<div class="container mt-5" >
     <div *ngIf="!registerMode" style='text-align: center;'>
-        <h1>Find your match</h1>
+        <h1>Explore your World</h1>
         <p class="lead">Come on in to Meet new People... all you need to do is sign up!</p>
         <div class="text-center">
             <button (click)="registerToggle()" class="btn btn-primary btn-lg">Register</button>
