--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,12 +1,12 @@
 <link href="/docs/5.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="margin-bottom: 50px;">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="/">GMeet</a>
         <ul class="navbar-nav me-auto">
           <ng-container *ngIf="(accountService.curentUserSource$ |async) as user">
             <li class="nav-item">
-              <a class="nav-link " routerLink="/members" routerLinkActive="active">Matches</a>
+              <a class="nav-link " routerLink="/members" routerLinkActive="active">May Know</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
@@ -24,11 +24,11 @@
         <div class="btn-group" *ngIf="(accountService.curentUserSource$ |async) as user" dropdown>
             <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                     aria-controls="dropdown-basic">
-                    Welcome {{user.userName | titlecase}} <span class="caret"></span>
+                    Welcome {{user.username | titlecase}} <span class="caret"></span>
             </button>
             <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
                 role="menu" aria-labelledby="button-basic">
-              <li role="menuitem"><a class="dropdown-item" href="#">Edit Profile</a></li>
+              <li role="menuitem"><a class="dropdown-item" routerLink='/member/edit'>Edit Profile</a></li>
               <li class="divider dropdown-divider"></li>
               <li role="menuitem"><a class="dropdown-item" href="#" (click)="logout()">Logout</a>
               </li>
