--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -55,7 +55,7 @@
                 </form>
             </tab>
             <tab heading="Edit Photos">
-                <p>Edit Photos in here</p>
+                <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
         </tabset>
     </div>
