--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -22,12 +22,12 @@
 
         
         <div class="btn-group" *ngIf="(accountService.curentUserSource$ |async) as user" dropdown>
+            <img src="{{user.photoUrl}}" alt="{{user.username}}">
             <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                     aria-controls="dropdown-basic">
                     Welcome {{user.username | titlecase}} <span class="caret"></span>
             </button>
-            <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
-                role="menu" aria-labelledby="button-basic">
+            <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
               <li role="menuitem"><a class="dropdown-item" routerLink='/member/edit'>Edit Profile</a></li>
               <li class="divider dropdown-divider"></li>
               <li role="menuitem"><a class="dropdown-item" href="#" (click)="logout()">Logout</a>
