--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -22,7 +22,7 @@
 
         
         <div class="btn-group" *ngIf="(accountService.curentUserSource$ |async) as user" dropdown>
-            <img src="{{user.photoUrl}}" alt="{{user.username}}">
+            <img src="{{user.photoUrl || './assets/not-found-img.jpg'}}" alt="{{user.username}}">
             <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                     aria-controls="dropdown-basic">
                     Welcome {{user.username | titlecase}} <span class="caret"></span>
