--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,17 +1,54 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && register()" autocomplete="off">
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
-    <div class="form-group">
-        <input type="text" class="form-control" name="username" 
-            [(ngModel)]="model.username" placeholder="Username"  >
-    </div>
 
-    <div class="form-group">
-        <input type="password" class="form-control" name="password" 
-            [(ngModel)]="model.password" placeholder="Password"  >
+    <div class="form-check" style="text-align: center; margin-bottom: 10px;">
+        <label style="margin: right 10px;" class="control-label"></label>
+        <label class="radio-inline">
+            <input class="form-check-input" type="radio" value="male" formControlName= 'gender'> Male
+        </label>
+        <label class="radio-inline">
+            <input class="form-check-input" style="margin-left: 20px;" type="radio" value="female" formControlName= 'gender'> Female
+        </label>
     </div>
+    
+    <app-input-text [formControl]='registerForm.controls["username"]' 
+        [label]='"Username"'>
+    </app-input-text >
+    <app-input-text [formControl]='registerForm.controls["knownAs"]' 
+        [label]='"KnownAs"'>
+    </app-input-text >
+    <app-input-date [formControl]='registerForm.controls["dateOfBirth"]' 
+    [maxDate]="maxDate"    
+    [label]='"Date of Birth"'>
+    </app-input-date>
+    <app-input-text [formControl]='registerForm.controls["city"]' 
+        [label]='"City"'>
+    </app-input-text >
+    <app-input-text [formControl]='registerForm.controls["country"]' 
+        [label]='"Country"'>
+    </app-input-text >
+
+        <app-input-text [formControl]='registerForm.controls["password"]' 
+        [label]='"Password"' [type]='"password"'>
+    </app-input-text>
+
+    <app-input-text [formControl]='registerForm.controls["confirmPassword"]' 
+        [label]='"Confirm Password"'
+        [type]='"password"'>
+    </app-input-text>
+
+    <div class="row" *ngIf="validationErrors.length > 0">
+        <ul class="text-danger">
+            <li *ngFor="let error of validationErrors">
+                {{error}}
+            </li>
+        </ul>
+    </div>
+    
+
     <div class="form-group text-center"  style= "margin-top: 4px;">
-        <button class="btn btn-success mr-2" style= "margin-right: 4px;" type="submit">Register</button>
+        <button [disabled]="!registerForm.valid" class="btn btn-success mr-2" style= "margin-right: 4px;" type="submit">Register</button>
         <button class="btn btn-secondary mr-2" (click)="cancel()" type="button">Cancel</button>
     </div>
 </form>
