sorting func & last Active update

--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -12,9 +12,9 @@
         <div class="card-body" style="padding: 1px;">
             <h6 class="card-title text-center" style="margin-bottom: 2px;">
                 <i class="fa fa-user mr-1"></i>
-                {{member.knownAs}}
+                {{member.knownAs}}, {{member.age}}
             </h6>
-            <p class="card-text text-muted text-center">{{member.city}}</p>
+            <p class="card-text text-muted text-center">{{member.city}}, {{member.country}}</p>
         </div>
     </div>
 </div>
