--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,4 +1,54 @@
-<link href="/docs/5.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+<div class="text-center mt-3">
+    <h2>Your matches - {{pagination?.TotalItems}} found</h2>
+</div>
+
+<div class="container mt-3">
+    <form #form="ngForm" class="d-flex mb-3" (ngSubmit)="loadMembers()" autocomplete="off">
+        <div class="d-flex mx-2">
+            <label class="col-form-label me-2">Age from: </label>
+            <input type="number" class="form-control ml-1" style="width: 70px;" name="minAge" 
+                [(ngModel)]="userParams.minAge">
+        </div>
+
+        <div class="d-flex px-2">
+            <label class="col-form-label me-2">Age to: </label>
+            <input type="number" class="form-control ml-1" style="width: 70px;" name="maxAge" 
+                [(ngModel)]="userParams.maxAge">
+        </div>
+
+        <div class="d-flex px-2">
+            <label class="col-form-label me-2">Show: </label>
+            <select name="gender" style="width: 130px" [(ngModel)]="userParams.gender" class="form-control ml-1">
+                <option *ngFor="let gender of genderList" [value]="gender.value">
+                    {{gender.display}}
+                </option>
+            </select>
+        </div>
+
+        <button class="btn btn-primary ms-1" type="submit">Apply Filters</button>
+        <button (click)="resetFilters()" class="btn btn-info ms-1" type="submit">Reset Filters</button>
+
+            <div class="btn-group float-right" style="margin-left: 5px;">
+                <button 
+                    type="button"
+                    class="btn btn-primary" 
+                    name='orderBy' 
+                    (click)="loadMembers()"
+                    btnRadio='lastActive'
+                    [(ngModel)]="userParams.orderBy">Last Active</button>
+
+                <button 
+                    type="button"
+                    class="btn btn-primary" 
+                    name='orderBy' 
+                    (click)="loadMembers()"
+                    btnRadio='created'
+                    [(ngModel)]="userParams.orderBy">Newest Members</button>
+            </div>
+
+    </form>
+</div>
 
 <div class="row" style="margin-bottom: 20px;">
     <div *ngFor="let member of members" class="col-2">
@@ -20,4 +70,3 @@
         lastText="&raquo;">
 </pagination>
 </div>
-
