--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -1,1 +1,36 @@
-<p>lists works!</p>
+<div class="text-center mt-3">
+    <h2>{{predicate === 'liked' ? 'Member I Like' : 'Member who Like Me'}}</h2>
+</div>
+
+<div class="container mt-3">
+    <div>
+        <div class="btn-group" name="predicate">
+            <button class="btn btn-primary" btnRadio="liked" 
+            [(ngModel)]="predicate" (click)="loadLikes()">Members I like</button>
+
+            <button class="btn btn-primary" btnRadio="likedBy" 
+            [(ngModel)]="predicate" (click)="loadLikes()">Members Who like Me </button>
+        </div>
+    </div>
+
+    <div class="row mt-2">
+        <div class="col-2" *ngFor="let member of members">
+            <app-member-card [member]="member"></app-member-card>
+        </div>
+    </div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination 
+        [boundaryLinks]="true" 
+        [totalItems]="pagination.TotalItems"
+        [itemsPerPage]="pagination.ItemsPerPage"
+        [(ngModel)]="pagination.CurrentPage"
+        (pageChanged)="pageChanged($event)"
+        [maxSize]="10"
+        previousText="&lsaquo;" 
+        nextText="&rsaquo;" 
+        firstText="&laquo;" 
+        lastText="&raquo;">
+</pagination>
+</div>
