users Presence detect

--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -11,7 +11,10 @@
         </ul>
         <div class="card-body" style="padding: 1px;">
             <h6 class="card-title text-center" style="margin-bottom: 2px;">
-                <i class="fa fa-user mr-1"></i>
+                <span [class.is-online]="(presence.onlineUsers$ |async).includes(member.userName)">
+                    <i class="fa fa-user mr-1"></i>
+
+                </span>
                 {{member.knownAs}}, {{member.age}}
             </h6>
             <p class="card-text text-muted text-center">{{member.city}}, {{member.country}}</p>
