--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -4,7 +4,8 @@
             No messages yet... say hi by using the message box below
         </div>
 
-        <ul *ngIf="(messageService.messageThread$ | async)" class="chat">
+        <ul #scrollMe style="overflow: scroll; height: 500px;" [scrollTop]="scrollMe.scrollHeight"
+            *ngIf="(messageService.messageThread$ | async)" class="chat">
             <li *ngFor="let message of (messageService.messageThread$ | async)">
                 <div>
                     <span class="chat-img" style="float: right;">
